# babble

./: LICENSE  Makefile.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
src/: main.tsx
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mumble/: config.rs  control.rs  events.rs  mod.rs  state.rs  transport.rs
src-tauri/src/transport/: errors.rs  types.rs
src/app/: app.tsx
src/stores/: app-store.ts
src/styles/: index.css
src/transports/: mock-transport.ts  types.ts
